--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.questdb</groupId>
             <artifactId>core</artifactId>
-            <version>4.2.0</version>
+            <version>4.2.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
